completed layout and images

--- a/Part_Two/typescript/src/index.css
+++ b/Part_Two/typescript/src/index.css
@@ -1,13 +1,25 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Lato", sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+button{
+  border: none;
+  background: none;
+}
+
+:root {
+  --lightgreen: #16e5e2;
+  --bgcolor: #0a2640;
+}
+
+
+.container {
+  max-width: 1440px;
+}
+
+ul {
+  list-style-type: none;
 }
